--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
       <header>
         <h2>sotsugov</h2>
         <p></p>
-        <p class="view"><a href="https://github.com/sotsugov">GitHub</a></p>
+        <p class="view">
+            <a href="https://github.com/sotsugov">GitHub</a><br/>
+            <a href="https://twitter.com/sotsugov">Twitter</a>
+        </p>
       </header>
       <section>
-      <h4>Something I've made</h4>
+      <h4>Project highlights</h4>
       <p>
         <ul>
           <li><a href="https://www.steampy.co">Steampy</a> Steam wish-list price drop notifications by SMS </li>
