--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
       <h4>Project highlights</h4>
       <p>
         <ul>
-          <li><a href="https://www.steampy.co">Steampy</a> Steam wish-list price drop notifications by SMS </li>
-          <li><a href="https://sotsugov.github.io/S2048/">S2048</a> 2048 clone using Skype emoticons </li>
+          <li><a href="https://www.steampy.co">Steampy</a> <i>Steam wish-list price drop notifications by SMS</i>
+              <p>Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. You'll never miss your favourite game on sale again.</p></li>
+          <li><a href="https://sotsugov.github.io/S2048/">S2048</a> <i>2048 game with Skype emoticons</i>
+              <p>Clone of 2048 by Gabriele Cirulli. Based on 1024 by Veewo Studio</a> and conceptually similar to Threes by Asher Vollmer.</a></p></li>
+
+          Work in progress:
+          <li><i><u>Also Known As</u> (in Russian) web version of Alias board game.</i>
+          <li><i><u>Cheappy</u> is a Steam game price lookup service, get the cheapest price for a game.</i></li>
+          <li><i><u>DoublePlusMeet</u> exploration into machine learning techniques applied to meeting services.</i>
         </ul>
       </p>
       </section>
