Steam profile permalink

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <p></p>
         <p class="view">
           <a href="https://github.com/sotsugov">GitHub</a><br/>
-          <a href="https://twitter.com/sotsugov">Twitter</a>
+          <a href="https://twitter.com/sotsugov">Twitter</a><br/>
+          <a href="https:////steamcommunity.com/profiles/76561197987677089">Steam</a>
         </p>
       </header>
       <section>
