--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
   <body>
     <div class="wrapper">
       <header>
-        <h2>sotsugov</h2>
+        <h3>sotsugov</h3>
         <p></p>
-        <p class="view">
-          <a href="https://github.com/sotsugov">GitHub</a><br/>
-          <a href="https://twitter.com/sotsugov">Twitter</a><br/>
-          <a href="https:////steamcommunity.com/profiles/76561197987677089">Steam</a>
+        <p>
+          <a href="https://github.com/sotsugov">github</a><br/>
+          <a href="https://twitter.com/sotsugov">twitter</a><br/>
+          <a href="https://steamcommunity.com/profiles/76561197987677089">steam</a><br/><br/>
         </p>
       </header>
       <section>
-      <h4>Project highlights</h4>
       <p>
         <ul>
-          <li><a href="https://www.steampy.co">Steampy</a> <i>Steam wish-list price drop notifications by SMS</i>
-              <p>Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. You'll never miss your favourite game on sale again.</p></li>
-          <li><a href="https://sotsugov.github.io/S2048/">S2048</a> <i>2048 game with Skype emoticons</i>
-              <p>Clone of 2048 by Gabriele Cirulli. Based on 1024 by Veewo Studio</a> and conceptually similar to Threes by Asher Vollmer.</a></p></li>
-
-          Work in progress:
-          <li><i><u>Also Known As</u> (in Russian) web version of Alias board game.</i>
-          <li><i><u>Cheappy</u> is a Steam game price lookup service, get the cheapest price for a game.</i></li>
-          <li><i><u>DoublePlusMeet</u> exploration into machine learning techniques applied to meeting services.</i>
+          <li><a href="http://steampy-flask-dev.elasticbeanstalk.com/index#page-top">Steampy</a> <i>Steam wish-list price drop notifications to your mobile</i>
+              <p>Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. Never miss your favourite game on sale again.</p></li>
+          <li><a href="http://pypong.com">PyPong</a> <i>Collaboration for Internal Hackathon Project (Jan 2016)</i>
+              <p>We used Raspberry Pi with a microphone attached to the ping pong table to record ping pong ball bounces. Audio streams are analysed to measure the amplitude and the length of each individual bounce. Data is used to report on unbroken bounce streak and longevity of the game. The longest game streak, total streaks and the table availability is displayed on the dashboard. Table status is shown as reserved, with an option displayed to send an SMS to the number to get a notification when the table becomes available.
+              </p>
+              <p></p></li>
+          <li><a href="https://sotsugov.github.io/S2048/">S2048</a> <i> Clone of 2048 by Gabriele Cirulli using Skype emoticons</i>
+              <p>Reveal some hidden emoticons that were cut from Skype client. An attempt to preserve some of the cool  emoticons that were cut from Skype client.</a></p></li>
+          <li><a href="https://github.com/sotsugov/til">TIL</a> <i>Today I Learned</i>
+              <p>A collection of write-ups, scripts or small things I learn day to day across a variety of languages and technologies.</li></p></li>
         </ul>
       </p>
       </section>
