--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <section>
       <p>
         <ul>
-          <li><a href="http://steampy-flask-dev.elasticbeanstalk.com/index#page-top">Steampy</a> <i>Steam wish-list price drop notifications to your mobile</i>
+          <li><a href="flask-steampy.herokuapp.com">Steampy</a> <i>Steam wish-list price drop notifications to your mobile</i>
+          <p><i>Python, Flask, MySQL</i></p>
               <p>Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. Never miss your favourite game on sale again.</p></li>
           <li><a href="https://goo.gl/photos/12W7xTC6iDM9sxWi6">PyPong</a> <i>Collaboration for Internal Hackathon Project (Jan 2016)</i>
               <p>We used Raspberry Pi with a microphone attached to the ping pong table to record ping pong ball bounces. Audio streams are analysed to measure the amplitude and the length of each individual bounce. Data is used to report on unbroken bounce streak and longevity of the game. The longest game streak, total streaks and the table availability is displayed on the dashboard. Table status is shown as reserved, with an option displayed to send an SMS to the number to get a notification when the table becomes available.
