--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section>
       <p>
         <ul>
-          <li><a href="https://flask-steampy.herokuapp.com">Steampy</a> <i>Steam wish-list price drop notifications to your mobile</i>
+          <li><a href="https://steampy.herokuapp.com">Steampy</a> <i>Steam wish-list price drop notifications to your mobile</i>
               <p>Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. Never miss your favourite game on sale again.</p></li>
           <li><a href="https://goo.gl/photos/12W7xTC6iDM9sxWi6">PyPong</a> <i>Collaboration for Internal Hackathon Project (Jan 2016)</i>
               <p>We used Raspberry Pi with a microphone attached to the ping pong table to record ping pong ball bounces. Audio streams are analysed to measure the amplitude and the length of each individual bounce. Data is used to report on unbroken bounce streak and longevity of the game. The longest game streak, total streaks and the table availability is displayed on the dashboard. Table status is shown as reserved, with an option displayed to send an SMS to the number to get a notification when the table becomes available.
@@ -36,7 +36,7 @@
           <li><a href="https://sotsugov.github.io/S2048/">S2048</a> <i> Clone of 2048 by Gabriele Cirulli using Skype emoticons</i>
               <p>Reveal some hidden emoticons that were cut from Skype client. An attempt to preserve some of the cool  emoticons that were cut from Skype client.</a></p></li>
           <li><a href="https://github.com/sotsugov/til">TIL</a> <i>Today I Learned</i>
-              <p>A collection of write-ups, scripts or small things I learn day to day across a variety of languages and technologies.</li></p></li>
+              <p>A collection of write-ups, scripts or small things I learn day to day across a variety of languages and technologies. Currently contains, gaming server set up, common problems with selenium and solutions, pythno scripts.</li></p></li>
         </ul>
       </p>
       </section>
