--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>
           <a href="https://github.com/sotsugov">github</a><br/>
           <a href="https://twitter.com/sotsugov">twitter</a><br/>
-          <a href="https://steamcommunity.com/profiles/76561197987677089">steam</a><br/><br/>
+          <!-- <a href="https://steamcommunity.com/profiles/76561197987677089">steam</a><br/><br/> -->
           <!-- <a href="https://drive.google.com/open?id=0B6Hcdhqew1dAa2ItdWFrcUxtQzg" class="text-muted">config</a> -->
           <br/><br/>
         </p>
@@ -35,8 +35,6 @@
               <p></p></li>
           <li><a href="https://sotsugov.github.io/S2048/">S2048</a> <i> Clone of 2048 by Gabriele Cirulli using Skype emoticons</i>
               <p>Reveal some hidden emoticons that were cut from Skype client. An attempt to preserve some of the cool  emoticons that were cut from Skype client.</a></p></li>
-          <li><a href="https://github.com/sotsugov/til">TIL</a> <i>Today I Learned</i>
-              <p>A collection of write-ups, scripts or small things I learn day to day across a variety of languages and technologies. Currently contains, gaming server set up, common problems with selenium and solutions, pythno scripts.</li></p></li>
         </ul>
       </p>
       </section>
