Add keybase link

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p>
           <a href="https://github.com/sotsugov">github</a><br/>
           <a href="https://twitter.com/sotsugov">twitter</a><br/>
+          <a href="https://keybase.io/sotsugov">keybase</a><br/>
           <!-- <a href="https://steamcommunity.com/profiles/76561197987677089">steam</a><br/><br/> -->
           <!-- <a href="https://drive.google.com/open?id=0B6Hcdhqew1dAa2ItdWFrcUxtQzg" class="text-muted">config</a> -->
           <br/><br/>
