--- a/index.html
+++ b/index.html
@@ -44,3 +44,7 @@
     </div>
   </body>
 </html>
+
+<!-- Steampy (2016). Notification service checks Steam wishlist for discounts and notifies the user by text message if the discount exceeds certain threshold. Python, Flask, Mongo, MySQL, AWS.
+PyPong (2016). Collaboration project for Nexmo IOT Hackathon. We used Raspberry Pi with a microphone attached to the ping pong table to record ping pong ball bounces. Processed and analysed audio streams in real time to measure amplitude and length of each bounce. The data was used to display how many bounces were made in each streak and longevity of the game. The longest game streak, total streaks and the table availability is displayed on the dashboard. Table status is shown as reserved, with an option displayed to send an SMS to the number to get a notification when the table becomes available. RPi2, Python, Flask, AWS.
+ -->
