Update config location

--- a/cfg.html
+++ b/cfg.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://drive.google.com/open?id=0B6Hcdhqew1dAV2FudnBGNkt3N2s" />
+<meta http-equiv="refresh" content="0; url=https://www.dropbox.com/s/27pipza5ej93933/lym.cfg?dl=1" />
