--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <a href="https://github.com/sotsugov">github</a><br/>
           <a href="https://twitter.com/sotsugov">twitter</a><br/>
           <a href="https://keybase.io/sotsugov">keybase</a><br/>
+          <a href="https://www.linkedin.com/in/sotsugov/">linkedin</a><br/>
           <br/><br/>
         </p>
       </header>
