Add styles and social icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>sotsugov</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -15,13 +16,17 @@
     <div class="wrapper">
       <header>
         <h3>sotsugov</h3>
-        <p></p>
+<!--         <p>
+          <a href="#">about</a><br/>
+          <a href="#">articles</a><br/>
+          <a href="#">projects</a><br/>
+          <a href="#">resume</a><br/>
+        </p> -->
         <p>
-          <a href="https://github.com/sotsugov">github</a><br/>
-          <a href="https://twitter.com/sotsugov">twitter</a><br/>
-          <a href="https://keybase.io/sotsugov">keybase</a><br/>
-          <a href="https://www.linkedin.com/in/sotsugov/">linkedin</a><br/>
-          <br/><br/>
+          <a href="https://github.com/sotsugov"><i class="fa fa-github" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/sotsugov"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/in/sotsugov/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+          <a href="mailto:sotsugov@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
         </p>
       </header>
       <section>
