--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>sotsugov</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -23,28 +22,36 @@
           <a href="#">resume</a><br/>
         </p> -->
         <p>
-          <a href="https://github.com/sotsugov"><i class="fa fa-github" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/sotsugov"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-          <a href="https://www.linkedin.com/in/sotsugov/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-          <a href="mailto:sotsugov@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+          <a href="https://github.com/sotsugov">github</a><br/>
+          <a href="https://twitter.com/sotsugov">twitter</a><br/>
+          <a href="https://www.linkedin.com/in/sotsugov/">linkedin</a><br/>
+          <a href="mailto:sotsugov@gmail.com">email</a><br/>
         </p>
       </header>
       <section>
       <p>
-        <ul>
-          <li><a href="https://steampy.xyz/">Steampy</a> <i>Steam wish-list price drop notifications to your mobile</i>
-              <p>Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. Never miss your favourite game on sale again.</p></li>
-          <li><a href="https://goo.gl/photos/12W7xTC6iDM9sxWi6">PyPong</a> <i>Collaboration for Internal Hackathon Project (Jan 2016)</i>
-              <p>We used Raspberry Pi with a microphone attached to the ping pong table to record ping pong ball bounces. Audio streams are analysed to measure the amplitude and the length of each individual bounce. Data is used to report on unbroken bounce streak and longevity of the game. The longest game streak, total streaks and the table availability are displayed on the dashboard. Table availability is shown, with an option to send an SMS to the number to get a notification when the table becomes available.
-              </p>
-              <p></p></li>
-          <li><a href="https://sotsugov.github.io/S2048/">S2048</a> <i> Clone of 2048 by Gabriele Cirulli using Skype emoticons</i>
-              <p>Reveal some hidden emoticons that were cut from Skype client. An attempt to preserve some of the cool  emoticons that were cut from Skype client.</a></p></li>
-        </ul>
+
+        <p>
+          <p><a href="https://steampy.xyz/">Steampy</a> <i>Steam wish-list price drop notifications to your mobile</i><br>
+          Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. Never miss your favourite game on sale again.
+        </p>
+        <p>
+          <a href="https://goo.gl/photos/12W7xTC6iDM9sxWi6">PyPong</a> <i>Interactive ping-pong table monitoring system with real-time game statistics dashboard, availability and reservation service</i><br>
+          We used Raspberry Pi with a microphone attached to the ping pong table to record ping pong ball bounces. Audio streams are analysed to measure the amplitude and the length of each individual bounce. Data is used to report on unbroken bounce streak and longevity of the game. The longest game streak, total streaks and the table availability are displayed on the dashboard. Table availability is shown, with an option to send an SMS to the number to get a notification when the table becomes available. Collaboration work for Nexmo Internal IOT Hackathon.
+        </p>
+        <p>
+          <a href="https://sotsugov.github.io/S2048/">S2048</a> <i> Clone of 2048 by Gabriele Cirulli using Skype emoticons</i><br>
+          Reveal some hidden emoticons that were cut from Skype client. An attempt to preserve some of the cool  emoticons that were cut from Skype client.
+        </p>
       </p>
       </section>
       <footer>
+        Igor Sotsugov
       </footer>
     </div>
+    <script>
+      feather.replace()
+    </script>
   </body>
+
 </html>
