Add avatar and cname

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>sotsugov</title>
+    <title>Igor Sotsugov</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -14,7 +14,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h3>sotsugov</h3>
+        <img class="avatar" src="assets/avatar_bw.jpg" alt="Igor">
+        <h3>Igor Sotsugov</h3>
+        <p class="bio">Software Engineer with interests in neural nets, data science and quality assurance. 1/1.316m Estonian.</p>
 <!--         <p>
           <a href="#">about</a><br/>
           <a href="#">articles</a><br/>
@@ -30,7 +32,6 @@
       </header>
       <section>
       <p>
-
         <p>
           <p><a href="https://steampy.xyz/">Steampy</a> <i>Steam wish-list price drop notifications to your mobile</i><br>
           Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. Never miss your favourite game on sale again.
@@ -45,13 +46,6 @@
         </p>
       </p>
       </section>
-      <footer>
-        Igor Sotsugov
-      </footer>
     </div>
-    <script>
-      feather.replace()
-    </script>
   </body>
-
 </html>
