--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Igor Sotsugov</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+    <link rel="canonical" href="https://sotsugov.com">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
