--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
         <p>
           <a href="https://goo.gl/photos/12W7xTC6iDM9sxWi6">PyPong</a> <i>Interactive ping-pong table monitoring system with real-time game statistics dashboard, availability and reservation service</i><br>
-          We used Raspberry Pi with a microphone attached to the ping pong table to record ping pong ball bounces. Audio streams are analysed to measure the amplitude and the length of each individual bounce. Data is used to report on unbroken bounce streak and longevity of the game. The longest game streak, total streaks and the table availability are displayed on the dashboard. Table availability is shown, with an option to send an SMS to the number to get a notification when the table becomes available. Collaboration work for Nexmo Internal IOT Hackathon.
+          PyPong is an interactive teble tennis monitoring system. Once set up, PyPong monitors ping pong ball bounce frequency to measure game logevity, total number of bounces, and longest rally. The results are displayed on the dashboard, if the table currently is in use, the notification service allows user to recieve SMS message when the table becomes available. Collaboration work for Nexmo Internal IOT Hackathon.
         </p>
         <p>
           <a href="https://sotsugov.github.io/S2048/">S2048</a> <i> Clone of 2048 by Gabriele Cirulli using Skype emoticons</i><br>
