--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Igor Sotsugov</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
-    <link rel="canonical" href="https://sotsugov.com">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="I make things.">
+    <meta name="author" content="Igor Sotsugov">
+
+    <title>Igor Sotsugov</title>
+
+    <link rel="stylesheet" href="./stylesheets/styles.css">
+    <link rel="shortcut icon" href="./assets/favico.png?">
+    <link rel="canonical" href="https://sotsugov.com">
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -17,7 +22,7 @@
       <header>
         <img class="avatar" src="assets/avatar_bw.jpg" alt="Igor">
         <h3>Igor Sotsugov</h3>
-        <p class="bio">Software Engineer with interests in neural nets, data science and quality assurance. 1/1.316m Estonian.</p>
+        <p class="bio">Software Engineer with interests in neural nets, data and quality. 1/1.316m Estonian.</p>
 <!--         <p>
           <a href="#">about</a><br/>
           <a href="#">articles</a><br/>
