--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. Never miss your favourite game on sale again.
         </p>
         <p>
-          <a href="https://goo.gl/photos/12W7xTC6iDM9sxWi6">PyPong</a> <i>Interactive ping-pong table monitoring system with real-time game statistics dashboard, availability and reservation service</i><br>
-          PyPong is an interactive teble tennis monitoring system. Once set up, PyPong monitors ping pong ball bounce frequency to measure game logevity, total number of bounces, and longest rally. The results are displayed on the dashboard, if the table currently is in use, the notification service allows user to recieve SMS message when the table becomes available. Collaboration work for Nexmo Internal IOT Hackathon.
+          <a href="https://goo.gl/photos/12W7xTC6iDM9sxWi6">PyPong</a> <i>Collaboration work for Nexmo Internal IOT Hackathon</i><br>
+          PyPong is an interactive table tennis monitoring system. PyPong monitors ping pong ball bounce frequency to measure game longevity, total number of bounces, and longest rally. The results are displayed on the dashboard, if the table currently is in use, the notification service allows user to receive SMS message when the table becomes available.
         </p>
         <p>
           <a href="https://sotsugov.github.io/S2048/">S2048</a> <i> Clone of 2048 by Gabriele Cirulli using Skype emoticons</i><br>
