--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="description" content="I make things.">
+    <meta name="description" content="I make things">
     <meta name="author" content="Igor Sotsugov">
 
     <title>Igor Sotsugov</title>
@@ -43,7 +43,7 @@
           Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. Never miss your favourite game on sale again.
         </p>
         <p>
-          <a href="https://goo.gl/photos/12W7xTC6iDM9sxWi6">PyPong</a> <i>Collaboration work for Nexmo Internal IOT Hackathon</i><br>
+          <a href="https://github.com/sotsugov/pypong">PyPong</a> <i>Collaboration work for Nexmo Internal IOT Hackathon</i><br>
           PyPong is an interactive table tennis monitoring system. PyPong monitors ping pong ball bounce frequency to measure game longevity, total number of bounces, and longest rally. The results are displayed on the dashboard, if the table currently is in use, the notification service allows user to receive SMS message when the table becomes available.
         </p>
         <p>
