Minor style fixes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           PyPong is an interactive table tennis monitoring system. PyPong monitors ping pong ball bounce frequency to measure game longevity, total number of bounces, and longest rally. The results are displayed on the dashboard, if the table currently is in use, the notification service allows user to receive SMS message when the table becomes available.
         </p>
         <p>
-          <a href="https://sotsugov.github.io/S2048/">S2048</a> <i> Clone of 2048 by Gabriele Cirulli using Skype emoticons</i><br>
+          <a href="https://sotsugov.github.io/S2048/">S2048</a> <i>Gabriele Cirulli's fork of 2048 using Skype emoticons</i><br>
           Reveal some hidden emoticons that were cut from Skype client. An attempt to preserve some of the cool  emoticons that were cut from Skype client.
         </p>
       </p>
