--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="wrapper">
       <header>
         <img class="avatar" src="assets/avatar_bw.jpg" alt="Igor">
-        <h3>Igor Sotsugov</h3>
+        <span class="vocalizer vocalizer-noeTG" data-source="auto" data-lang="English"><h3>Igor Sõtšugov</h3> </span>
         <p class="bio">Software Engineer with interests in neural nets, data and quality. 1/1.316m Estonian.</p>
 <!--         <p>
           <a href="#">about</a><br/>
@@ -54,4 +54,5 @@
       </section>
     </div>
   </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vocalizer/1.0.0/vocalizer.min.js"></script>
 </html>
