Add vocalizer styles

--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="description" content="I make things">
     <meta name="author" content="Igor Sotsugov">
-
     <title>Igor Sotsugov</title>
-
     <link rel="stylesheet" href="./stylesheets/styles.css">
     <link rel="shortcut icon" href="./assets/favico.png?">
     <link rel="canonical" href="https://sotsugov.com">
-
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -23,7 +20,7 @@
         <img class="avatar" src="assets/avatar_bw.jpg" alt="Igor">
         <span class="vocalizer vocalizer-noeTG" data-source="auto" data-lang="English"><h3>Igor Sõtšugov</h3> </span>
         <p class="bio">Software Engineer with interests in neural nets, data and quality. 1/1.316m Estonian.</p>
-<!--         <p>
+        <!--         <p>
           <a href="#">about</a><br/>
           <a href="#">articles</a><br/>
           <a href="#">projects</a><br/>
@@ -37,22 +34,23 @@
         </p>
       </header>
       <section>
-      <p>
         <p>
-          <p><a href="https://steampy.xyz/">Steampy</a> <i>Steam wish-list price drop notifications to your mobile</i><br>
-          Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. Never miss your favourite game on sale again.
+          <p>
+            <p><a href="https://steampy.xyz/">Steampy</a> <i>Steam wish-list price drop notifications to your mobile</i><br>
+            Steampy is a notification service for your Steam wishlist. All you need to do is sign up, set the threshold and your phone number. We'll track your wishlist items for sales and discounts. As soon as the price drops, you'll get a text message with the name, price and a link to the store. Never miss your favourite game on sale again.
+          </p>
+          <p>
+            <a href="https://github.com/sotsugov/pypong">PyPong</a> <i>Collaboration work for Nexmo Internal IOT Hackathon</i><br>
+            PyPong is an interactive table tennis monitoring system. PyPong monitors ping pong ball bounce frequency to measure game longevity, total number of bounces, and longest rally. The results are displayed on the dashboard, if the table currently is in use, the notification service allows user to receive SMS message when the table becomes available.
+          </p>
+          <p>
+            <a href="https://sotsugov.github.io/S2048/">S2048</a> <i>Gabriele Cirulli's fork of 2048 using Skype emoticons</i><br>
+            Reveal some hidden emoticons that were cut from Skype client. An attempt to preserve some of the cool  emoticons that were cut from Skype client.
+          </p>
         </p>
-        <p>
-          <a href="https://github.com/sotsugov/pypong">PyPong</a> <i>Collaboration work for Nexmo Internal IOT Hackathon</i><br>
-          PyPong is an interactive table tennis monitoring system. PyPong monitors ping pong ball bounce frequency to measure game longevity, total number of bounces, and longest rally. The results are displayed on the dashboard, if the table currently is in use, the notification service allows user to receive SMS message when the table becomes available.
-        </p>
-        <p>
-          <a href="https://sotsugov.github.io/S2048/">S2048</a> <i>Gabriele Cirulli's fork of 2048 using Skype emoticons</i><br>
-          Reveal some hidden emoticons that were cut from Skype client. An attempt to preserve some of the cool  emoticons that were cut from Skype client.
-        </p>
-      </p>
       </section>
     </div>
   </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vocalizer/1.0.0/vocalizer.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vocalizer/1.0.0/vocalizer.min.js"></script>
+  <link rel="stylesheet" href="./stylesheets/voca.css">
 </html>
