Add new voco file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <img class="avatar" src="assets/avatar_bw.jpg" alt="Igor">
-        <span class="vocalizer vocalizer-noeTG" data-source="auto" data-lang="English"><h3>Igor Sõtšugov</h3> </span>
+        <span class="vocalizer vocalizer-k9VEq" data-source="auto" data-lang="English"><h3>Igor Sõtšugov</h3> </span>
         <p class="bio">Software Engineer with interests in neural nets, data and quality. 1/1.316m Estonian.</p>
         <!--         <p>
           <a href="#">about</a><br/>
