--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="wrapper">
       <header>
         <img class="avatar" src="assets/avatar_bw.jpg" alt="Igor">
-        <span class="vocalizer vocalizer-k9VEq" data-source="auto" data-lang="Russian"><h3>Igor Sõtšugov</h3></span>
+        <h3>Igor Sõtšugov</h3>
         <p class="bio">Software Engineer with interests in neural nets, data and quality. 1/1.316m Estonian.</p>
         <p>
           <a href="https://github.com/sotsugov">github</a><br/>
@@ -45,6 +45,4 @@
       </section>
   </div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vocalizer/1.0.0/vocalizer.min.js"></script>
-<link rel="stylesheet" href="./stylesheets/voca.css">
 </html>
