Update config loc

--- a/cfg.html
+++ b/cfg.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://www.dropbox.com/s/27pipza5ej93933/lym.cfg?dl=1" />
+<meta http-equiv="refresh" content="0; url=https://www.dropbox.com/s/xkawf6lpe9xa6hr/lym1280.cfg?dl=0?dl=1" />
