--- a/cfg.html
+++ b/cfg.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://www.dropbox.com/s/xkawf6lpe9xa6hr/lym1280.cfg?dl=0?dl=1" />
+<meta http-equiv="refresh" content="0; url=https://drive.google.com/open?id=1gE-p_eoD91GOgSnh3TRjBeqRP3PJsJP0" />
