--- a/cfg.html
+++ b/cfg.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://drive.google.com/open?id=1gE-p_eoD91GOgSnh3TRjBeqRP3PJsJP0" />
+<meta http-equiv="refresh" content="0; url=https://drive.google.com/drive/folders/1b-R3w5bCbJ-O57bmZEzyg25ylnx-8EWo?usp=sharing" />
