--- a/20799/⚫.html
+++ b/20799/⚫.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="description" content="2079">
     <meta name="author" content="Igor Sotsugov">
-    <title>⚫️</title>
+    <title>⚫</title>
     <link rel="stylesheet" href="../stylesheets/2079.css">
   </head>
 
