--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <p class="bio">Software Engineer with interests in neural nets, data and quality. 1/1.316m Estonian.</p>
         <p>
           <a href="https://github.com/sotsugov">github</a><br/>
+          <a href="https://gitlab.com/sotsugov">gitlab</a><br/>
           <a href="https://twitter.com/sotsugov">twitter</a><br/>
           <a href="https://www.linkedin.com/in/sotsugov/">linkedin</a><br/>
           <a href="mailto:sotsugov@gmail.com">email</a><br/>
@@ -59,7 +60,10 @@
         <h6><a href="https://github.com/sotsugov/pypong">PyPong</a> Collaboration work for Nexmo Internal IOT Hackathon</h6>
         <p>PyPong is an interactive table tennis monitoring system. PyPong monitors ping pong ball bounce frequency to measure game longevity, total number of bounces, and longest rally. The results are displayed on the dashboard, if the table currently is in use, the notification service allows user to receive SMS message when the table becomes available.</p>
         <h6><a href="https://sotsugov.github.io/S2048/">S2048</a> Gabriele Cirulli's fork of 2048 using Skype emoticons</h6>
-        <p>Reveal some hidden emoticons that were cut from Skype client. An attempt to preserve some of the cool  emoticons that were cut from Skype client.</p>
+        <p>Reveal some hidden emoticons that were cut from Skype client. An attempt to preserve some of the cool emoticons that were cut from Skype client.</p>
+<!--         <h6><a href="https://2079.gitlab.io/2079/">Project 2079</a> Sci-Fi Roleplaying World based on GURPS</h6>
+        <p></p>
+ -->
       </section>
   </div>
 </body>
