--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img class="avatar" src="assets/avatar_bw.jpg" alt="Igor">
+        <img class="avatar" src="assets/jun-2020.jpg" alt="Igor">
         <h3>Igor Sõtšugov</h3>
         <p class="bio">Software Engineer with interests in neural nets, data and quality. 1/1.316m Estonian.</p>
         <p>
